<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gamekeeper</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="image_descript">The image of one of the participants in the game</string>
    <string name="ib_descript_plus">Increase this player\'s points</string>
    <string name="ib_descript_minus">Decrease this player\'s points</string>
    <string name="preference_players">Players</string>
    <string name="preference_p1_pic">Player 1 picture</string>
    <string name="preference_p2_pic">Player 2 picture</string>
    <string name="preference_misc">Miscellaneous</string>
    <string name="language_select_title">Select language</string>
    <string name="preference_language">Change language</string>
    <string name="preference_reset">Clear data</string>
    <string name="reset_message">Do you want to reset all stats?</string>
    <string name="reset_title">Reset</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pic_updated">Picture updated</string>
    <string name="all_reset">All data deleted</string>
    <string name="edit">Edit</string>
    <string name="two_minutes">2:00</string>
    <string name="license">License</string>
    <string name="mit_license">The MIT License (MIT)\n\nCopyright \u00a9 2014 Martin Disch\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>

</resources>