<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/preference_players" >
        <Preference
            android:key="p1pic"
            android:title="@string/preference_p1_pic" />
        <Preference
            android:key="p2pic"
            android:title="@string/preference_p2_pic" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_misc" >
        <ListPreference
            android:dialogTitle="@string/language_select_title"
            android:entries="@array/language_entries"
            android:entryValues="@array/locales"
            android:key="language"
            android:title="@string/preference_language" />

        <Preference
            android:key="reset"
            android:title="@string/preference_reset" >
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>