<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llCardRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/card_margin"
    android:layout_marginLeft="@dimen/card_margin"
    android:layout_marginRight="@dimen/card_margin"
    android:orientation="horizontal"
    android:weightSum="7" >

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2" >

        <ImageView
            android:id="@+id/ivC1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="#d3d3d3"
            android:contentDescription="@string/image_descript"
            android:padding="1dp"
            android:src="@drawable/unknown" />

        <ImageButton
            android:id="@+id/ibP1Inc"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:alpha="0.2"
            android:background="@android:color/transparent"
            android:contentDescription="@string/ib_descript_plus"
            android:scaleType="centerInside"
            android:src="@drawable/plus"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/ibP1Dec"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:alpha="0.1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/ib_descript_minus"
            android:scaleType="centerInside"
            android:src="@drawable/minus"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3" >

        <TextView
            android:id="@+id/tvDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/card_padding"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:textSize="45sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2" >

        <ImageView
            android:id="@+id/ivC2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="#d3d3d3"
            android:contentDescription="@string/image_descript"
            android:padding="1dp"
            android:src="@drawable/unknown" />

        <ImageButton
            android:id="@+id/ibP2Inc"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:alpha="0.2"
            android:background="@android:color/transparent"
            android:contentDescription="@string/ib_descript_plus"
            android:scaleType="centerInside"
            android:src="@drawable/plus"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/ibP2Dec"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:alpha="0.1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/ib_descript_minus"
            android:scaleType="centerInside"
            android:src="@drawable/minus"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>